# stock-market-analytics

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-entrypoint.sh  init_project.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
notebooks/: data_splitting.ipynb
notebooks/model_factory_nbs/: calibration.ipynb  data_management.ipynb  estimation.ipynb  evaluation.ipynb
src/stock_market_analytics/: config.py  main.py
src/stock_market_analytics/data_collection/: __init__.py  batch_collection_flow.py  collection_steps.py  data_config.py
src/stock_market_analytics/data_collection/collectors/: __init__.py  base.py  yfinance_collector.py
src/stock_market_analytics/data_collection/models/: __init__.py  collection_plans.py  data_quality_rules.py
src/stock_market_analytics/data_collection/processors/: __init__.py  data_quality.py  timeline.py
src/stock_market_analytics/feature_engineering/: __init__.py  dev_nb.ipynb  feature_building_flow.py  feature_pipeline.py  feature_steps.py  features.py  features_config.py  preprocessing.py
src/stock_market_analytics/inference/: __init__.py  dashboard.py  inference_functions.py  inference_steps.py
src/stock_market_analytics/inference/assets/: style.css
src/stock_market_analytics/modeling/: __init__.py  baseline_predictor.py  basic_code.py  modeling_config.py  modeling_functions.py  modeling_steps.py  pipeline_factory.py  processing_functions.py  training_flow_cb.py  training_flow_cbm_qr.py  tuning_flow_cb.py
src/stock_market_analytics/modeling/components/: __init__.py  catboost_model.py  data_processor.py  evaluator.py
src/stock_market_analytics/monitoring/: monitoring_flow.py  monitoring_metrics.py  monitoring_nb.ipynb  monitoring_steps.py
tests/: README.md  conftest.py
tests/integration/test_data_collection/: test_collection_steps.py  test_collectors.py
tests/integration/test_feature_engineering/: test_feature_steps.py
tests/integration/test_inference/: __init__.py  test_inference_steps.py
tests/integration/test_modeling/: test_modeling_steps.py
tests/integration/test_monitoring/: test_monitoring_steps.py
tests/unit/: test_config.py
tests/unit/test_data_collection/: test_collection_steps.py  test_collectors.py  test_data_quality.py  test_models.py  test_processors.py
tests/unit/test_feature_engineering/: test_feature_pipeline.py  test_feature_steps.py  test_preprocessing.py
tests/unit/test_inference/: __init__.py  test_inference_functions.py  test_inference_steps.py
tests/unit/test_modeling/: test_functions.py  test_modeling_steps.py  test_processing.py  test_training_flow_cb.py  test_training_flow_cbm_qr.py
tests/unit/test_monitoring/: __init__.py  test_monitoring_metrics.py
(+81 files in other folders)
